# velocity_modelling

./: .gitignore  .isort.cfg  Jenkinsfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: deptry.yml  git-extension.yml  isort.yml  numpydoc.yaml  publish-PyPI.yml  pytest.yml  wiki.yml
script/basin/: combine_geojson.py  convert_to_geojson.py
tests/: common.py  conftest.py  test_bounding_box.py  test_c_vs_python_velocity_model.py  test_gen_1dprofile_c_vs_python.py  test_gen_3dvm_c_vs_python.py  test_gen_3dvm_scenarios.py  test_gen_threshold_points.py  test_gen_thresholds.py  test_generate_1d_profiles.py  test_generate_velocity_model.py  test_nzcvm_c_vs_python.py  test_nzcvm_scenarios.py  test_nzvm_c_vs_python.py  test_nzvm_hypothesis.py  test_nzvm_scenarios.py  test_velocity_model_1d.py  test_velocity_model_plots.py
tests/input/: Kelly.yaml  Swedge1.yaml  rupture_1.json
tests/scenarios/1d_profiles/: locations.csv
tests/scenarios/Cant1D_2p07/: nzcvm.cfg
tests/scenarios/Multi_Boundary/: nzcvm.cfg
tests/scenarios/Wellington_2p03/: nzcvm.cfg
tests/scenarios/zvalues_test/: zvalues_test.ll
velocity_modelling/: __init__.py  basin_model.py  bounding_box.py  constants.py  cvm_registry.py  data_format.py  data_helper.py  data_root.py  generate_velocity_model.py  geometry.py  global_model.py  gtl.py  interpolate.py  load_data.py  nzcvm_registry.yaml  nzcvm_sample.cfg  registry.py  submodel_registry.yaml  threshold.py  velocity1d.py  velocity3d.py  velocity_model_1d.py
velocity_modelling/Data/: nzvm_registry.yaml  nzvm_sample.cfg  vm_params_sample.yaml
velocity_modelling/Data/model_versions/: 2p03_nelson_only.yaml
velocity_modelling/cvm/: basin_model.py  constants.py  coordinates.py  geometry.py  global_model.py  gtl.py  interpolate.py  logging.py  nzcvm_registry.yaml  nzvm_registry.yaml  registry.py  velocity.py  velocity1d.py  velocity3d.py
velocity_modelling/cvm/model_versions/: 2p03.yaml  2p07.yaml  2p07_students2024.yaml
velocity_modelling/cvm/output/: emod3d.py
velocity_modelling/cvm/scripts/: compare_emod3d.py  emod3d_2_csv.py  generate_velocity_model.py  nzcvm.py  nzvm.py
velocity_modelling/cvm/submodel/: BPVSubMod_v1.py  BPVSubMod_v2.py  BPVSubMod_v3.py  BPVSubMod_v4.py  Cant1D_v1.py  EPtomo2010.py  MioceneSubMod_v1.py  NaNsubMod.py  PaleogeneSubMod_v1.py  PlioceneSubMod_v1.py  bpv_submod_v1.py  bpv_submod_v2.py  bpv_submod_v3.py  bpv_submod_v4.py  canterbury1d_submod.py  canterbury1d_v1.py  ep_tomography_submod_v2010.py  miocene_submod_v1.py  nan_submod.py  paleogene_submod_v1.py  pliocene_submod_v1.py
velocity_modelling/cvm/tests/: test_c_vs_python_velocity_model.py  test_generate_velocity_model.py
velocity_modelling/cvm/tools/: compare_emod3d.py  download_data.py  generate_basin_wiki.py  plot_basin.py  plot_basin_with_map.py  surface_ascii2csv.py  tidy_data.py  tomo_ascii2h5.py
velocity_modelling/cvm/write/: csv.py  emod3d.py  hdf5.py
velocity_modelling/data/global/surface/: CantDEM.h5  DEM.h5  negInf.h5  posInf.h5  shoreline_distance_2k.h5
velocity_modelling/data/global/vm1d/: Cant1D_v1.fd_modfile  Cant1D_v2.fd_modfile  Cant1D_v2_Pliocene_Enforced.fd_modfile
velocity_modelling/data/global/vs30/: NZ_Vs30.h5
velocity_modelling/data/regional/: model_version_2p03.txt  model_version_2p07.txt
velocity_modelling/data/regional/Alexandra/: Alexandra_basement_WGS84.h5  (+1 more)
velocity_modelling/model_versions/: 2p02.yaml  2p03.yaml  2p03_nelson_only.yaml  2p06.yaml  2p07.yaml  2p07_students2024.yaml  2p08.yaml  2p09.yaml  2p09_no_basin.yaml  3p01_BC2022.yaml  3p01_DB2025.yaml  3p01_EP2010.yaml  3p01_EP2020.yaml  3p01_EP2020_no_basin.yaml  3p01_EP2025.yaml  3p01_SW2025.yaml
velocity_modelling/scripts/: extract_cross_section.py  generate_1d_profiles.py  generate_3d_model.py  generate_threshold_grid.py  generate_threshold_points.py  generate_thresholds.py  nzcvm.py  plot_velocity_model.py  view_velocity_model.py
velocity_modelling/submodel/: base.py  bpv_submod_v1.py  bpv_submod_v2.py  bpv_submod_v3.py  bpv_submod_v4.py  canterbury1d_submod.py  constant.py  depth_dependent.py  ep_tomography_submod_v2010.py  miocene_submod_v1.py  miocene_submod_v2.py  nan_submod.py  paleogene_submod_v1.py  paleogene_submod_v2.py  palmerstonnorth_pliocene_submod_v1.py  pliocene_submod_v1.py  pliocene_submod_v2.py  pn_pliocene_submod_v1.py  tomography.py  vm1d.py
velocity_modelling/tests/: test_geographic_rotation.py
velocity_modelling/tools/: all_basins_wiki.py  all_nz_basins_wiki.py  basin_outline_to_geojson.py  basin_wiki.py  boundary_txt_to_geojson.py  combine_geojson.py  compare_emod3d.py  compare_hdf5.py  compress_vm.py  convert_hdf5_to_emod3d.py  download_data.py  generate_basin_wiki.py  h5_to_emod3d.py  improved_cross_section.py  map_all_basins.py  map_one_basin.py  plot_basin_with_map.py  surface_ascii2h5.py  tomo_ascii2h5.py
velocity_modelling/tools/visualization/: merge_geojson_boundaries.py  surfaces_3dviewer.py  tomo_3dviewer.py  tomo_boundary.py
velocity_modelling/write/: csv.py  emod3d.py  hdf5.py
wiki/: Basins.md  Basins_2p08.md  DataFormats.md  Development-Schedule.md  Extracting-Cross-Sections.md  Generating-1D-Profiles.md  Generating-3D-Model.md  Generating-Threshold-Points.md  Generating-Thresholds.md  Generating-Velocity-Model.md  Installation.md  Model-Versions.md  NZ-Community-Velocity-Models.md  OutputFormats.md  Plotting-Velocity-Models.md  Tomography.md
wiki/basins/: Alexandra.md  Balclutha.md  BanksPeninsulaVolcanics.md  Banks_Peninsula_Volcanics.md  Canterbury.md  Canterbury_North.md  Canterbury_Pre_Quaternary.md  Cheviot.md  Collingwood.md  CollingwoodBasin.md  Dunedin.md  Gisborne.md  GreaterWellington.md  Hakataramea.md  Hanmer.md  HawkesBay.md  Kaikoura.md  Karamea.md  MacKenzie.md  Mackenzie.md  Marlborough.md  Mosgiel.md  MotuBay.md  Motu_Bay.md  Murchison.md  NE_Otago.md  Napier.md  Nelson.md  NorthCanterbury.md  OmaioBay.md  PalmerstonNorth.md  Porirua.md  Ranfurly.md  SouthernHawkesBay.md  Southland.md  SpringsJunction.md  TeAnau.md  TolagaBay.md  Waiapu.md  WaikatoHauraki.md  (+8 more)
(+202 files in other folders)
